--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,8 @@ plainwhite:
     #   instance: example.com
     # - username: jekyll2
     #   instance: example.com
-  disqus_shortname: games
+  disqus_shortname: minji
+  analytics_id: "< 189793968 >"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
@@ -55,12 +56,14 @@ plainwhite:
 # - about.md
 
 # Build settings
-theme: plainwhite
+# theme: plainwhite
+theme: jekyll-theme-cayman
+remote_theme: samarsault/plainwhite-jekyll
 
 plugins:
   - jekyll-seo-tag
 #  - jekyll-feed
 
-remote_theme: samarsault/plainwhite-jekyll
+
 
 
