--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ plainwhite:
     # - username: jekyll2
     #   instance: example.com
   disqus_shortname: minji
-  analytics_id: "< 189793968 >"
+  analytics_id: "G-LHRPV111NY"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
