--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    #email: jekyll
+    email: jaellen@korea.ac.kr
 
     # Mastodon instances
     # mastodon:
