--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: mmminji
+title: 밍로그
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "show_exerpts:"
