--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ plainwhite:
     #   instance: example.com
     # - username: jekyll2
     #   instance: example.com
-  disqus_shortname: minji
+  # disqus_shortname: minji
   analytics_id: "G-LHRPV111NY"
 
 # If you want to link only specific pages in your header, uncomment
