--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Minji Kang
-  tagline: 홍익인간 \n Data Scientist
+  tagline: 홍익인간; 널리 세상을 이롭게 하다
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
