--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: 홍익인간; 널리 세상을 이롭게 하다
+title: 밍로그
 author: GitHub User
 email: your-email@domain.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: 홍익인간; 널리 세상을 이롭게 하다
+  # Write an awesome description for your new site here. You can edit this
+  # line in _config.yml. It will appear in your document head meta (for
+  # Google search results) and in your feed.xml site description.
 show_excerpts: true # set to true to show excerpts on the homepage
 url : https://mmminji.github.io
 
